--- a/src/main/left-side-bar/style.css
+++ b/src/main/left-side-bar/style.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 .main .left-side-bar .left {
     text-align: center;
-    width: 80px;
-    height: 80px;
     background-color: #F9CB86;
     border-radius: 0.5rem;
     background-image: url('../../images/circle-darkyellow.png');
@@ -11,10 +9,10 @@
 }
 
 
-#left-1{background-size: 25px 25px;}
-#left-2{background-size: 35px 35px;}
-#left-3{background-size: 45px 45px;}
-#left-4{background-size: 55px 55px;}
+#left-1{background-size: 22px 22px;}
+#left-2{background-size: 30px 30px;}
+#left-3{background-size: 40px 40px;}
+#left-4{background-size: 45px 45px;}
 
 .left-side-bar h1{
     border-bottom: 1px solid black;
@@ -26,6 +24,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     gap: 1rem;
     transition: transform .5s;
 
@@ -41,8 +40,8 @@
 
 .left-side-bar .freq{
     position: relative;
-    top: -10px;
-    left: 60px;
+    top: -12px;
+    left: 45px;
     height: 20px;
     width: 20px;
     text-align: center;
@@ -57,15 +56,39 @@
 @media only screen and (max-width: 900px) {
     .left-side{
         flex-direction: row;
-        padding: 2rem 1rem 4rem 1rem;
+        padding: 2rem 1rem 3rem;
     }
     .left-side-bar {
         margin: auto;
+    }
+
+    .left-side-bar .freq{
+        top: -12px;
+        left: 45px;
+
+    }
+    .main .left-side-bar .left {
+        width: 60px;
+        height: 60px;
+
     }
 }
 /* Large screens */
 @media only screen and (min-width: 900px) {
     .left-side{
         flex-direction: column;
+    }
+    .left-side-bar{
+        width: 142px;
+    }
+    .left-side-bar .freq{
+        top: -10px;
+        left: 60px;
+
+    }
+    .main .left-side-bar .left {
+        width: 80px;
+        height: 80px;
+
     }
 }
