--- a/src/main/style.css
+++ b/src/main/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0rem;
+    padding: 0rem;
+    text-align: center;
+}
 .selected{
     background-color: #c9a165;
 }
@@ -10,15 +15,13 @@
 }
 
 /* ============================================= */
-.main{
+.main {
     display: flex;
-    justify-content: space-between;
-    padding: 40px 100px;
-    flex-wrap: wrap;
+    justify-content: space-evenly;
     align-items: center;
     font-family: 'Poppins';
-    width: 78%;
     margin: auto;
+    margin-top: 1rem;
 }
 
 .clear-boardPlay {
@@ -27,6 +30,7 @@
     font-family: 'Poppins', sans-serif;
     transition: transform .1s;
     text-align: center;
+    margin: 2rem 0rem 1rem;
 }
 .clear-boardPlay svg {
     padding-left: 8px;
@@ -44,22 +48,16 @@
 
 }
 
-.focus {
-    opacity: 1.0;
-}
-
-.not-focus {
-    opacity: 0.5
-}
 /* small */
 @media only screen and (max-width: 900px) {
     .main {
-        padding: 20px 20px;
+        flex-direction: column;
     }
 }
 /* large */
 @media only screen and (min-width: 900px) {
     .main {
-        padding: 40px 100px;
+        flex-direction: row;
+        padding: 0rem 13rem;
     }
 }
